build: Adding the right pool vm name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,5 @@
-resources:
-- repo: self
-
 pool:
-  vmImage: Hosted VS2017
+  vmImage: 'Ubuntu 16.04'
 #Your build pipeline references a secret variable named ‘sp_username’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
 #Your build pipeline references a secret variable named ‘sp_password’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
 #Your build pipeline references a secret variable named ‘sp_tenantid’. Create or edit the build pipeline for this YAML file, define the variable on the Variables tab, and then select the option to make it secret. See https://go.microsoft.com/fwlink/?linkid=865972
