--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,11 @@ pool:
 variables:
 - group: AzureKeyVaultSecrets
 
+trigger:
+- master
+- releases/*
+- develop
+
 steps:
 - task: UsePythonVersion@0
   inputs:
