--- a/aml_config/config.json
+++ b/aml_config/config.json
@@ -1,6 +1,5 @@
 {
-    "subscription_id": "<>",
-    "resource_group": "DevOps_AzureML_Demo",
-    "workspace_name": "AzureML_Demo_ws",
-    "location": "southcentralus"
+    "subscription_id": "9aa7299f-fdd4-47b8-acaf-825d2bdc8bba",
+    "resource_group": "PavResourceGroup",
+    "workspace_name": "pavmlflows"
 }
