--- a/aml_config/security_config.json
+++ b/aml_config/security_config.json
@@ -8,6 +8,7 @@
     "remote_vm_ip" : "<>",
     "experiment_name" : "devops-ai-demo",
     "aml_cluster_name" : "aml-compute",
+    "model_name" : "sklearn_regression_model2.pkl",
     "vnet_resourcegroup_name" : "<>", 
     "vnet_name" : "<>", 
     "subnet_name" : "<>"
