--- a/environment_setup/requirements.txt
+++ b/environment_setup/requirements.txt
@@ -1,5 +1,14 @@
-scipy==1.0.0
-scikit-learn==0.19.1
-numpy==1.14.5
-pandas==0.23.1
+#numpy==1.17.0
+#scipy==1.2.2
+#scikit-learn==0.19.1
+#pandas==0.23.1
 pytest==4.3.0
+flake8==3.7.8
+flake8_formatter_junit_xml==0.0.6
+requests>=2.22
+python-dotenv>=0.10.3
+azureml>=0.2
+azureml-core>=1.0
+azureml-pipeline>=1.0 
+azure-cli==2.0.46
+azureml-sdk[cli]
