Additional env updates - no deployment tested

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ LOCATION = ''
 # Azure ML Workspace Variables
 EXPERIMENT_NAME = ''
 SCRIPT_FOLDER = './'
+BLOB_STORE_NAME = ''
 # Remote VM Config
 REMOTE_VM_NAME = ''
 REMOTE_VM_USERNAME = ''
@@ -18,3 +19,16 @@ AML_CLUSTER_VM_SIZE = ''
 AML_CLUSTER_MAX_NODES = ''
 AML_CLUSTER_MIN_NODES = ''
 AML_CLUSTER_PRIORITY = 'lowpriority'
+# Training Config
+MODEL_NAME = ''
+# AML Pipeline Config
+TRAINING_PIPELINE_NAME = ''
+PIPELINE_CONDA_PATH = 'aml_config/conda_dependencies.yml'
+# Image config
+IMAGE_NAME = ''
+IMAGE_DESCRIPTION = ''
+IMAGE_VERSION = ''
+# ACI Config
+ACI_CPU_CORES = ''
+ACI_MEM_GB = ''
+ACI_DESCRIPTION = ''
