URL to the image on Dockerhub

--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -1,7 +1,7 @@
 FROM conda/miniconda3
 
 LABEL org.label-schema.vendor = "Microsoft" \
-      org.label-schema.url = "dockerhub" \
+      org.label-schema.url = "https://hub.docker.com/r/microsoft/mlopspython" \
       org.label-schema.vcs-url = "https://github.com/microsoft/MLOpsPython"
 
        
