--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -9,7 +9,7 @@ pool:
 
 
 container:
-  image: $(FULL_AGENT_IMAGE_NAME)
+  image: pepsimlamlcr.azurecr.io/mlopsbuildagent:latest
   endpoint: acrconnection
 
 
@@ -26,7 +26,7 @@ steps:
 - bash: |
    # Invoke the Python training pipeline
       
-   python3 $(Build.SourcesDirectory)/Code/aml_service/pipelines/train_pipeline.py
+   python3 $(Build.SourcesDirectory)/Code/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
     SOURCES_DIR: '$(Build.SourcesDirectory)'
