Update build-train.yml for Azure Pipelines

--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -10,7 +10,7 @@ pool:
 
 container:
   image: pepsimlamlcr.azurecr.io/mlopsbuildagent:latest
-  endpoint: acrconnection
+  endpoint: acrbackupconnection
 
 
 variables:
