--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -21,8 +21,8 @@ variables:
 steps:
 - bash: |
    # Invoke the Python training pipeline
-      
-   python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
+   echo $SP_APP_SECRET   
+   #python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
     SOURCES_DIR: '$(Build.SourcesDirectory)'
