--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -26,7 +26,7 @@ steps:
   failOnStderr: 'false'
   env:
     SOURCES_DIR: '$(Build.SourcesDirectory)'
-    SP_APP_SECRET: $(SP_APP_SECRET1)
+    SP_APP_SECRET: 'HI'
     BLOB_STORAGE_Key: '$(BLOB_STORAGE_Key)'
   displayName: 'Train model using AML with Remote Compute'
   enabled: 'true'
