--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -21,7 +21,7 @@ variables:
 steps:
 - bash: |
    # Invoke the Python training pipeline
-   echo $SP_APP_SECRET   
+   echo $SOURCES_DIR   
    #python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
