--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -24,10 +24,11 @@ steps:
 - bash: |
    # Invoke the Python training pipeline
    printenv
-   #python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
+   python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
     SOURCES_DIR: '$(Build.SourcesDirectory)'    
     BLOB_STORAGE_Key: '$(BLOB_STORAGE_Key)'
+    SP_APP_SECRET: '$(SP_APP_SECRET)'
   displayName: 'Train model using AML with Remote Compute'
   enabled: 'true'
