--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -17,12 +17,13 @@ variables:
 
 
 steps:
+- template: base-pipeline.yml
+    
 - bash: |
    # Invoke the Python training pipeline
    python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
-    BLOB_STORAGE_Key: '$(BLOB_STORAGE_Key)'
     SP_APP_SECRET: '$(SP_APP_SECRET)'
   displayName: 'Train model using AML with Remote Compute'
   enabled: 'true'
