--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -8,8 +8,8 @@ pool:
   vmImage: 'ubuntu-latest'
 
 container:
-  image: pepsimlamlcr.azurecr.io/mlopsbuildagent:latest
-  endpoint: acrbackupconnection
+  image: mlopscr.azurecr.io/public/mlops/mlopspython:latest
+  endpoint: acrconnection
 
 
 variables:
