--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -4,8 +4,8 @@ parameters:
 steps:
 - script: |
    ls $BUILD_SOURCESDIRECTORY
-   flake8
-   #flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
+   flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
+   cat $(Build.BinariesDirectory)/flake8_amlservice_testresults.xml
    #flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
