--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -1,20 +1,19 @@
+# this pipeline should be ignored for now
 parameters:
   pipelineType: 'training'
 
 steps:
 - script: |
-   ls $BUILD_SOURCESDIRECTORY
    flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
-   cat $(Build.BinariesDirectory)/flake8_amlservice_testresults.xml
-   #flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
+   flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
 
-#- script: |
-#   pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
-#  displayName: 'Run unit tests'
-#  enabled: 'true'
+- script: |
+   pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
+  displayName: 'Run unit tests'
+  enabled: 'true'
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
