--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -1,4 +1,3 @@
-# this pipeline should be ignored for now
 parameters:
   pipelineType: 'training'
 
@@ -10,10 +9,10 @@ steps:
   displayName: 'Run code quality tests'
   enabled: 'true'
 
-- script: |
-   pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
-  displayName: 'Run unit tests'
-  enabled: 'true'
+# - script: |
+#    pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
+#   displayName: 'Run unit tests'
+#   enabled: 'true'
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
