--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -4,7 +4,8 @@ parameters:
 steps:
 - script: |
    flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
-   flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
+   #flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
+   cat $(Build.BinariesDirectory)/flake8_amlservice_testresults.xml
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
@@ -14,11 +15,11 @@ steps:
 #   displayName: 'Run unit tests'
 #   enabled: 'true'
 
-- task: PublishTestResults@2
-  condition: succeededOrFailed()
-  inputs:
-    testResultsFiles: '$(Build.BinariesDirectory)/*_testresults.xml'
-    testRunTitle: 'Unit tests'
-    failTaskOnFailedTests: true
-  displayName: 'Publish unit test results'
-  enabled: 'true'
+# - task: PublishTestResults@2
+#   condition: succeededOrFailed()
+#   inputs:
+#     testResultsFiles: '$(Build.BinariesDirectory)/*_testresults.xml'
+#     testRunTitle: 'Unit tests'
+#     failTaskOnFailedTests: true
+#   displayName: 'Publish unit test results'
+#   enabled: 'true'
