--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -18,10 +18,12 @@ variables:
 
 steps:
 - script: |
+   ls -ltr
    echo 'hi'
    flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
    #flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
    cat $(Build.BinariesDirectory)/flake8_amlservice_testresults.xml
+   ls -ltr $(Build.BinariesDirectory)
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
