--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -20,7 +20,7 @@ steps:
 - script: |
    ls -ltr
    echo 'hi'
-   flake8 --output-file=$(Build.BinariesDirectory)/flake8_testresults.xml   
+   flake8 --output-file=$(Build.BinariesDirectory)/flake8_testresults.xml --format junit-xml  
    cat $(Build.BinariesDirectory)/flake8_testresults.xml
    ls -ltr $(Build.BinariesDirectory)
   workingDirectory: '$(Build.SourcesDirectory)'
