--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -1,11 +1,10 @@
+# this pipeline should be ignored for now
 parameters:
   pipelineType: 'training'
 
 steps:
 - script: |
    flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
-   #flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
-   cat $(Build.BinariesDirectory)/flake8_amlservice_testresults.xml
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
