--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -5,15 +5,14 @@ parameters:
 steps:
 - script: |
    flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
-   flake8 --output-file=$(Build.BinariesDirectory)/flake8_tests_testresults.xml tests
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
 
-- script: |
-   pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
-  displayName: 'Run unit tests'
-  enabled: 'true'
+# - script: |
+#    pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
+#   displayName: 'Run unit tests'
+#   enabled: 'true'
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
