--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -43,7 +43,7 @@ steps:
   condition: succeededOrFailed()
   inputs:
     testResultsFiles: '$(Build.BinariesDirectory)/unittest-results.xml'
-    testRunTitle: 'Unt tests'
+    testRunTitle: 'Unit tests'
     failTaskOnFailedTests: true
   displayName: 'Publish unit test results'
   enabled: 'true'
