--- a/environment_setup/requirements.txt
+++ b/environment_setup/requirements.txt
@@ -1,7 +1,8 @@
-pandas==0.23.1
-numpy==1.14.5
 pytest==4.3.0
-azureml-sdk>=1.0#.45
+requests>=2.22
+azureml>=0.2
+azureml-core>=1.0
+azureml-pipeline>=1.0
 python-dotenv>=0.10.3
 flake8
 flake8_formatter_junit_xml
