--- a/environment_setup/requirements.txt
+++ b/environment_setup/requirements.txt
@@ -1,8 +1,6 @@
 pytest==4.3.0
 requests>=2.22
-azureml>=0.2
-azureml-core>=1.0
-azureml-pipeline>=1.0
+azureml-sdk>=1.0
 python-dotenv>=0.10.3
 flake8
 flake8_formatter_junit_xml
