--- a/environment_setup/requirements.txt
+++ b/environment_setup/requirements.txt
@@ -1,12 +1,7 @@
-scipy==1.0.0
-scikit-learn==0.19.1
-numpy==1.14.5
-pandas==0.23.1
 pytest==4.3.0
-python-dotenv==0.10.3
-azure-cli
-requests>=2.22 #.0
-azureml-sdk>=1.0#.45
+requests>=2.22
+azureml>=0.2
+azureml-sdk>=1.0
 python-dotenv>=0.10.3
 flake8
 flake8_formatter_junit_xml
