--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -29,7 +29,7 @@ steps:
   condition: succeededOrFailed()
   inputs:
     testResultsFiles: '$(Build.BinariesDirectory)/unittest-results.xml'
-    testRunTitle: 'Unt tests'
+    testRunTitle: 'Unit tests'
     failTaskOnFailedTests: true
   displayName: 'Publish unit test results'
   enabled: 'true'
