--- a/azdo_pipelines/base-pipeline.yml
+++ b/azdo_pipelines/base-pipeline.yml
@@ -4,21 +4,23 @@ parameters:
 
 steps:
 - script: |
-   flake8 --output-file=$(Build.BinariesDirectory)/flake8_amlservice_testresults.xml aml_service
+   flake8 --output-file=$(Build.BinariesDirectory)/lint-testresults.xml --format junit-xml  
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
   enabled: 'true'
-
-# - script: |
-#    pytest --junitxml=$(Build.BinariesDirectory)/unittest-results.xml $(Build.SourcesDirectory)/Code/tests/unit/${{parameters.pipelineType}}
-#   displayName: 'Run unit tests'
-#   enabled: 'true'
+  
+- script: |
+   pytest --junitxml=$(Build.BinariesDirectory)/unit-testresults.xml $(Build.SourcesDirectory)/tests/unit
+  displayName: 'Run unit tests'
+  enabled: 'true'
+  env:
+    SP_APP_SECRET: '$(SP_APP_SECRET)'
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
   inputs:
-    testResultsFiles: '$(Build.BinariesDirectory)/*_testresults.xml'
-    testRunTitle: 'Unit tests'
+    testResultsFiles: '$(Build.BinariesDirectory)/*-testresults.xml'
+    testRunTitle: 'Linting & Unit tests'
     failTaskOnFailedTests: true
-  displayName: 'Publish unit test results'
+  displayName: 'Publish linting and unit test results'
   enabled: 'true'
