--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -49,10 +49,25 @@ steps:
   enabled: 'true'
     
 - bash: |
-   # Invoke the Python training pipeline
+   # Invoke the Python building and publishing a training pipeline
    python3 $(Build.SourcesDirectory)/aml_pipelines/model_train_pipeline.py
   failOnStderr: 'false'
   env:
     SP_APP_SECRET: '$(SP_APP_SECRET)'
   displayName: 'Train model using AML with Remote Compute'
   enabled: 'true'
+
+- task: CopyFiles@2
+  displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)/aml_service'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    Contents: 'run_train_pipeline.py'  
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact'
+  inputs:
+    ArtifactName: 'mlops-pipelines'
+    publishLocation: 'container'
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    TargetPath: '$(Build.ArtifactStagingDirectory)'  
